--- a/bastion/templates/linux-bastion.template
+++ b/bastion/templates/linux-bastion.template
@@ -1,6 +1,6 @@
 {
     "AWSTemplateFormatVersion": "2010-09-09",
-    "Description": "This template is intended to be deployed into an existing VPC with two public subnets. It will create an auto-scaling group of Linux bastion instances in the public VPC subnets. **WARNING** This template creates Amazon EC2 instance and related resources. You will be billed for the AWS resources used if you create a stack from this template. QS(0037)",
+    "Description": "This template is intended to be deployed into an existing VPC with two public subnets. It will create an auto-scaling group of Linux bastion instances in the public VPC subnets. Based on AWS QuickStart template.",
     "Metadata": {
         "AWS::CloudFormation::Interface": {
             "ParameterGroups": [
@@ -23,6 +23,7 @@
                         "KeyPairName",
                         "BastionAMIOS",
                         "BastionInstanceType"
+			"AltAdminUser"
                     ]
                 },
                 {
@@ -43,8 +44,8 @@
                         "default": "AWS Quick Start Configuration"
                     },
                     "Parameters": [
-                        "QSS3BucketName",
-                        "QSS3KeyPrefix"
+                        "MirovoyYAMLBucketName",
+                        "MYS3KeyPrefix"
                     ]
                 }
             ],
@@ -60,6 +61,9 @@
                 },
                 "BastionInstanceType": {
                     "default": "Bastion Instance Type"
+                },
+                "AltAdminUser": {
+                    "default": "Alternate Admin User"
                 },
                 "EnableBanner": {
                     "default": "Enable Banner"
@@ -82,11 +86,11 @@
                 "PublicSubnet2ID": {
                     "default": "Public Subnet 2 ID"
                 },
-                "QSS3BucketName": {
-                    "default": "Quick Start S3 Bucket Name"
+                "MirovoyYAMLBucketName": {
+                    "default": "Mirovoy YAML  S3 Bucket Name"
                 },
-                "QSS3KeyPrefix": {
-                    "default": "Quick Start S3 Key Prefix"
+                "MYS3KeyPrefix": {
+                    "default": "Mirovoy YAML S3 Key Prefix"
                 },
                 "RemoteAccessCIDR": {
                     "default": "Allowed Bastion External Access CIDR"
@@ -143,6 +147,15 @@
             "Description": "Amazon EC2 instance type for the bastion instances",
             "Type": "String"
         },
+        "AltAdminUser": {
+            "AllowedPattern": "^[a-z_]([a-z0-9_-]*$",
+	    "MinLength": 1,
+	    "MaxLength": 32,
+            "ConstraintDescription": "Alternate Admin User is a valid Linux username. It should start with a lowercase letter or underscore; contain only letters, numbers, underscores, or hyphens; and be no more than 32 characters long."
+            "Default": "none",
+            "Description": "An alternate account that will be created on the instance, and given ssh access and sudo permissions.",
+            "Type": "String"
+        },
         "EnableBanner": {
             "AllowedValues": [
                 "true",
@@ -193,18 +206,18 @@
             "Description": "ID of the public subnet 2 you want to provision the second bastion into (e.g., subnet-e3246d8e)",
             "Type": "AWS::EC2::Subnet::Id"
         },
-        "QSS3BucketName": {
+        "MirovoyYAMLBucketName": {
             "AllowedPattern": "^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$",
-            "ConstraintDescription": "Quick Start bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-).",
-            "Default": "aws-quickstart",
-            "Description": "S3 bucket name for the Quick Start assets. Quick Start bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-).",
+            "ConstraintDescription": "Mirovoy YAML  bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-).",
+            "Default": "mirovoy-yaml",
+            "Description": "S3 bucket name for the Mirovoy CloudFormation assets. Mirovoy YAML bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-).",
             "Type": "String"
         },
-        "QSS3KeyPrefix": {
+        "MYS3KeyPrefix": {
             "AllowedPattern": "^([0-9a-zA-Z-]+/)*$",
-            "ConstraintDescription": "Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/). The prefix should end with a forward slash (/).",
-            "Default": "quickstart-linux-bastion/",
-            "Description": "S3 key prefix for the Quick Start assets. Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/) and it should end with a forward slash (/).",
+            "ConstraintDescription": "Mirovoy YAML key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/). The prefix should end with a forward slash (/).",
+            "Default": "bastion/",
+            "Description": "S3 key prefix for the Mirovoy CloudFormation assets. This should be the top-level directory path inside the bucket, leading to the assets for this template (i.e., where templates directory, scripts directory, etc... are located) Mirovoy YAML key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/) and it should end with a forward slash (/).",
             "Type": "String"
         },
         "RemoteAccessCIDR": {
@@ -544,7 +557,7 @@
                             ],
                             "Resource": {
                                 "Fn::Sub": [
-                                    "arn:${Partition}:s3:::${QSS3BucketName}/${QSS3KeyPrefix}*",
+                                    "arn:${Partition}:s3:::${MirovoyYAMLBucketName}/${MYS3KeyPrefix}*",
                                     {
                                         "Partition": {
                                             "Fn::If": [
@@ -717,7 +730,7 @@
                         },
                         "buckets": [
                             {
-                                "Ref": "QSS3BucketName"
+                                "Ref": "MirovoyYAMLBucketName"
                             }
                         ]
                     }
@@ -734,9 +747,9 @@
                                         },
                                         {
                                             "Fn::Sub": [
-                                                "https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}scripts/bastion_bootstrap.sh",
+                                                "https://${MirovoyYAMLBucketName}.${MYS3Region}.amazonaws.com/${MYS3KeyPrefix}scripts/bastion_bootstrap.sh",
                                                 {
-                                                    "QSS3Region": {
+                                                    "MYS3Region": {
                                                         "Fn::If": [
                                                             "GovCloudCondition",
                                                             "s3-us-gov-west-1",
