Fixed missing comma, YAML error.

--- a/bastion/templates/linux-bastion.template
+++ b/bastion/templates/linux-bastion.template
@@ -22,7 +22,7 @@
                     "Parameters": [
                         "KeyPairName",
                         "BastionAMIOS",
-                        "BastionInstanceType"
+                        "BastionInstanceType",
 			"AltAdminUser"
                     ]
                 },
