Add AMI name mapping

--- a/bastion/templates/linux-bastion.template
+++ b/bastion/templates/linux-bastion.template
@@ -393,6 +393,9 @@
             }
         },
         "LinuxAMINameMap": {
+            "Mirovoy-Amazon-Linux-HVM": {
+                "Code": "MRVYAMZNLINUX"
+            },
             "Amazon-Linux-HVM": {
                 "Code": "AMZNLINUXHVM"
             },
