--- a/bastion/templates/linux-bastion.template
+++ b/bastion/templates/linux-bastion.template
@@ -104,13 +104,14 @@
     "Parameters": {
         "BastionAMIOS": {
             "AllowedValues": [
+		"Mirovoy-Amazon-Linux-HVM",
                 "Amazon-Linux-HVM",
                 "CentOS-7-HVM",
                 "Ubuntu-Server-14.04-LTS-HVM",
                 "Ubuntu-Server-16.04-LTS-HVM",
                 "SUSE-SLES-15-HVM"
             ],
-            "Default": "Amazon-Linux-HVM",
+            "Default": "Mirovoy-Amazon-Linux-HVM",
             "Description": "The Linux distribution for the AMI to be used for the bastion instances",
             "Type": "String"
         },
