change section name

--- a/bastion/templates/linux-bastion.template
+++ b/bastion/templates/linux-bastion.template
@@ -41,7 +41,7 @@
                 },
                 {
                     "Label": {
-                        "default": "AWS Quick Start Configuration"
+                        "default": "AWS S3 Configuration"
                     },
                     "Parameters": [
                         "MirovoyYAMLBucketName",
