Attempt to get it to create a user

--- a/bastion/templates/linux-bastion.template
+++ b/bastion/templates/linux-bastion.template
@@ -800,7 +800,12 @@
                                     ]
                                 }
                             }
-                        }
+                        },
+			"users": {
+			    "Ref": "AltAdminUser": {
+			    	"groups": [ "adm", "wheel" ]
+			    }
+			}
                     }
                 }
             },
