Attempt to get it to create a user; attempt to fix JSON

--- a/bastion/templates/linux-bastion.template
+++ b/bastion/templates/linux-bastion.template
@@ -802,7 +802,7 @@
                             }
                         },
 			"users": {
-			    "Ref": "AltAdminUser": {
+			    { "Ref": "AltAdminUser" } : {
 			    	"groups": [ "adm", "wheel" ]
 			    }
 			}
