Try and get a parameter as a key in the JSON

--- a/bastion/templates/linux-bastion.template
+++ b/bastion/templates/linux-bastion.template
@@ -802,7 +802,8 @@
                             }
                         },
 			"users": {
-			    { "Ref": "AltAdminUser" } : {
+			    { "Fn::Sub": [ "${user}",
+			      { "user": { "Ref": "AltAdminUser" } } ] } : {
 			    	"groups": [ "adm", "wheel" ]
 			    }
 			}
