try with a static value

--- a/bastion/templates/linux-bastion.template
+++ b/bastion/templates/linux-bastion.template
@@ -802,8 +802,7 @@
                             }
                         },
 			"users": {
-			    { "Fn::Sub": [ "${user}",
-			      { "user": { "Ref": "AltAdminUser" } } ] } : {
+			    "test" : {
 			    	"groups": [ "adm", "wheel" ]
 			    }
 			}
